fix alignment for website

--- a/src/components/home-page/coffee/coffee.scss
+++ b/src/components/home-page/coffee/coffee.scss
@@ -17,6 +17,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    margin-top: 8em;
 
     h3 {
         text-align: center;
